# gnibo

./: .gitignore
gitorio/: Cargo.toml  config.yaml
gitorio/src/: config.rs  main.rs
