[package]
name = "gitorio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
color-eyre = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
sysinfo = "0.29.7"
